src/main/java/oo/solid/lsp/sample/bad/ContaEstagiario.java
package oo.solid.lsp.sample.bad;

import oo.solid.lsp.sample.EstagiarioNaoTemRendimentosException;

public class ContaEstagiario extends ContaBaseFuncionario{

    @Override
    public void rende() {
        throw new EstagiarioNaoTemRendimentosException();
    }
}
